<resources>
    <string name="app_name">Swipecare Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="aeps_nbalance">AEPS\nBALANCE</string>
    <string name="recharge_services">RECHARGE SERVICES</string>
    <string name="prepaid">Mobile\nRecharge</string>
    <string name="postpaid">POSTPAID</string>
    <string name="swipewallet">SWIPEWALLET</string>
    <string name="cashback_up_to_6_why_late_do_more_recharge_and_earn_more">Cashback up to 6%. why late do more recharge and earn more --</string>
    <string name="fasttag">FASTTAG</string>
    <string name="bill_payment_services">Bill Payment Services</string>
    <string name="mantra">Mantra</string>
    <string name="morpho">Morpho</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="please_enter_mobile_number">Please enter a valid Mobile  10  digit no or 16/17 digit lpg id </string>
    <string name="please_enter_a_valid_mobile_no">Amount should be  equal or more than 1o</string>
    <string name="please_enter_remark">Remark should not be empty</string>
    <string name="please_enter_a_valid_utr_no">Amount should be  equal or more than 1o</string>

    <string name="please_select_operator">Please select operator</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="please_enter_utr">Please enter UTR no</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="capture_device_info">Capture Device Info</string>
    <string name="see_plans"><u>See plans</u></string>
    <string name="see_offers"><u>See Offers</u></string>
    <string name="amount">Amount</string>
    <string name="fetching_recharge_plans">Fetching Recharge Plans</string>
    <string name="fetching_operator">Fetching Operators</string>
    <string name="plan_validity">Validity: %s</string>
    <string name="please_check_your_mobile_number_and_try_again">Please check your mobile number and try again</string>
    <string name="scan_finger">Scan Finger</string>
    <string name="submit">Submit</string>
    <string name="offers_for_operators_available">recharge offers available only for Airtel, Idea, and Vodafone</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="please_try_again">Please try again</string>
    <string name="enter_device_credentials_or_biometric">Enter phone screen lock pattern, PIN, password or fingerprint</string>
    <string name="unlock">Unlock %s</string>
    <string name="swipecare">SwipeCare</string>
    <string name="biometric_hardware_unavailable">Biometric Hardware not available on the device</string>
    <string name="biometric_features_unavailable">Biometric features are currently unavailable.</string>
    <string name="set_screen_lock_or_finger_print">Please add screen lock or fingerprint to continue</string>
    <string name="kyc_already_completed">Your Kyc is already completed</string>
    <string name="kyc">KYC</string>
    <string name="please_do_web_kyc_first">Please complete web kyc first</string>
    <string name="please_complete_paysprint_kyc">please complete mobile KYC</string>
    <string name="swipepay">SWIPEPAY</string>
    <string name="aeps_balance">AEPS BALANCE</string>
    <string name="swipe_nbalance">SWIPE\nBALANCE</string>
    <string name="do_hassle_free_payout_only_on_swipe_care">Do hassle free payout only on swipe care</string>
    <string name="swipe_payout">SWIPE PAYOUT</string>
    <string name="customer_mobile">CUSTOMER MOBILE</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="account_details">Account Details</string>
    <string name="Somethinwentwrong">Somethhing Went Wrong</string>

    <string name="please_enter_customer_name">Please Enter Customer Name</string>
    <string name="mobile_number_should_be_10_digits">Mobile Number should be 10 digits</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="ifsc_code_11_digits">IFSC code must be 11 digits</string>
    <string name="verify_payout_details">Please verify payout details</string>
    <string name="otp_sent">otpsent</string>
    <string name="please_enter_otp">Please Enter Otp</string>
    <string name="otp_sent_text">An OTP is sent to your registered mobile number %s for payout of ₹ %s</string>
    <string name="something_went_wrong_sorry">Something went wrong. Sorry for the inconvenience</string>
    <string name="payout_report">Payout Report</string>
    <string name="otp_resent">Otp Resent</string>
    <string name="status">Status</string>
    <string name="download_mini_statement">Download Mini Statement</string>
    <string name="pdf_file_generated_successfully">Please check downloads for the PDF</string>
    <string name="date">DATE</string>
    <string name="description">DESCRIPTION</string>
    <string name="amountCaps">AMOUNT</string>
    <string name="transactionType">TYPE</string>
    <string name="no_transactions_found">No Transactions found</string>
    <string name="main_wallet">Main Wallet</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="aeps_report">Aeps Report</string>
    <string name="main_wallet_report">Main Wallet Report</string>
    <string name="userlist">Userlist</string>

    <string name="fingerprint_scan_successful">Fingerprint scan successful</string>
    <string name="finger_print_scan_failed">Fingerprint scan failed. Please scan your fingers again</string>
    <string name="swipe_care_logo">Swipe Care Logo</string>
    <string name="addhr_no">Mobile No :</string>
    <string name="mobil">Addhr No :</string>
    <string name="act_bal">Provider</string>
    <string name="cash_withdraw_receipt">Cash Withdraw Receipt</string>
    <string name="cash_withdraw_caps">Recharge Recipt</string>
    <string name="balance_enquiry_caps">BALANCE ENQUIRY</string>
    <string name="balance_enquiry_receipt">Balance Enquiry Receipt</string>
    <string name="capture_screenshot">capture_screenshot</string>
    <string name="download_screenshot">Download Screenshot</string>
    <string name="share_receipt">Share Receipt</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="notifications">notifications</string>
    <string name="help">Support</string>
    <string name="my_reports"> Reports</string>
    <string name="upgrade_shop">Upgrade Shop</string>
    <string name="commission_structure">Commission Structure</string>
    <string name="certificates">Certificates</string>
    <string name="buy_device">Buy Device</string>
    <string name="download_banners">Download banners</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="commission">Commission</string>
    <string name="fetching_commission">Fetching Commission</string>
    <string name="title_activity_commission">Commision</string>
    <string name="Useradd">User Add</string>
</resources>
