<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/home"
        android:icon="@drawable/homee"
        android:title="@string/home"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/person_icon_black"
        android:title="@string/profile" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/support"
        android:title="@string/help"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/my_reports"
        android:icon="@drawable/report"
        android:title="@string/my_reports" />


    <item
        android:id="@+id/actionLogout"
        android:icon="@drawable/mylogout_24dp"
        android:orderInCategory="70"
        android:title="Logout"
        android:visible="true"/>
</menu>
